# poetry_practice

./: README.md
poetry-demo/: README.md  pyproject.toml
poetry-demo/poetry_demo/: __init__.py
poetry-demo/tests/: test_hello.py
