[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["pigimaru <pigimaru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
logzero = "^1.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
